welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
lastDigit:-6: error: Missing closing brace `}' assumed here
try {
^lastDigit:1: error: expected class or object definition
def lastDigit(a:Int, b:Int):Boolean = {
^